@@ -1,3 +1,8 @@
+2005-07-08  Pedro Villavicencio Garrido  <pvillavi@gnome.org>
+
+	* src/netspeed.c (timeout_adjust_cb): make use of glib timeout functions 
+	instead of deprecated gtk counterparts.
+
 2005-06-15  Pedro Villavicencio Garrido  <pvillavi@gnome.org>
 
 	* es.po: update Spanish translation 
